Fixed backend deployment configuration